k8s/ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress

metadata:
  name: tiny-url-ingress
  namespace: tiny-url

spec:
  ingressClassName: nginx

  rules:
    - http:
        paths:

          - path: /api/v1
            pathType: Prefix
            backend:
              service:
                name: url-service
                port:
                  number: 8081

          - path: /
            pathType: Prefix
            backend:
              service:
                name: redirection-service
                port:
                  number: 8082
